# colorsource

./: CMakeLists.txt  ColorSource.pro  LICENSE  Makefile  colorsender.cpp  colorsender.h  colorsource.pro  matrix.h  rpc.cpp
src/: colorsender.cpp  colorsender.h  main.cpp
